<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_posts">

    <fragment
        android:id="@+id/nav_posts"
        android:name="com.example.fireroomv100.ui.posts.PostsFragment"
        android:label="@string/menu_posts"
        tools:layout="@layout/fragment_posts" />

    <fragment
        android:id="@+id/nav_shifts"
        android:name="com.example.fireroomv100.ui.shifts.ShiftsFragment"
        android:label="@string/menu_shifts"
        tools:layout="@layout/fragment_shifts" />

    <fragment
        android:id="@+id/nav_onboarding"
        android:name="com.example.fireroomv100.ui.onboarding.OnboardingFragment"
        android:label="@string/menu_onboarding"
        tools:layout="@layout/fragment_onboarding" />
</navigation>