<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:id="@+id/item_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        app:cardCornerRadius="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            >
            <ImageView
                android:contentDescription="@string/photo_desc"
                android:id="@+id/profile_pic_id"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@drawable/baseline_account_circle_24"
                android:src="@drawable/baseline_account_circle_24"

                />

            <TextView
                android:id="@+id/agentName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/agent_name"
                android:contentDescription="@string/agent_name"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_pic_id"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/contentPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/agentName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:text="@string/lorem_ipsum"

                />

            <ImageView
                android:id="@+id/picPost"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintTop_toBottomOf="@id/contentPost"
                tools:srcCompat="@drawable/baseline_image_24"
                android:src="@drawable/baseline_image_24"
                android:contentDescription="@string/post_pic_description" />

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_star_24"
                android:text="@string/like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/picPost"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="?attr/colorOnPrimary"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginTop="15dp"
                />

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="?attr/colorOnPrimary"
                android:drawableStart="@drawable/baseline_add_comment_24"
                android:text="@string/comment"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/likeBtn"
                app:layout_constraintTop_toBottomOf="@id/picPost" />


        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.cardview.widget.CardView>
</layout>