<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data class="LoginBinding"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:context=".ui.authenticate.LoginActivity">

            <!--Card for the email login-->
            <androidx.cardview.widget.CardView
                android:id="@+id/login_panel_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:elevation="50dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="40dp">

                    <TextView
                        android:id="@+id/signIn_label_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/firebase_navy"
                        android:textSize="28sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/account_icon_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/baseline_account_circle_120"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/signIn_label_textView"
                        app:srcCompat="@drawable/baseline_account_circle_120" />

                    <EditText
                        android:id="@+id/email_input_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:autofillHints="emailAddress"
                        android:backgroundTint="@color/firebase_navy"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/firebase_navy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/account_icon_imageView" />


                    <EditText
                        android:id="@+id/password_input_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="15dp"
                        android:autofillHints="password"
                        android:backgroundTint="@color/firebase_navy"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="text|textPassword|textNoSuggestions"
                        android:textColorHint="@color/firebase_navy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_input_edittext" />

                    <Button
                        android:id="@+id/email_login_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/log_in"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_input_editText" />

                    <TextView
                        android:id="@+id/forgotPassword_option_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/forgot_your_password"
                        android:textColor="@color/firebase_blue"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_login_button" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/accessOptions_label_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/or_access_with"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_panel_cardView" />

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="120dp"
                android:layout_height="53dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textColor="@color/firebase_navy"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/google_login_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accessOptions_label_textView" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phone_login_button"
                app:layout_constraintTop_toBottomOf="@+id/accessOptions_label_textView" />

            <TextView
                android:id="@+id/noAccount_label_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:text="@string/doesn_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/createAccount_option_textView"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_login_button" />

            <TextView
                android:id="@+id/createAccount_option_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="25dp"
                android:text="@string/sign_up"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/noAccount_label_textView"
                app:layout_constraintTop_toBottomOf="@+id/google_login_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>