<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="VerificationCodeInputBinding"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/phoneNumber_instructions_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone_code_instructions"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_card" />


        <androidx.cardview.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:background="?attr/colorSecondary"
                android:contentDescription="@string/app_name"
                android:id="@+id/imageView2"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_sms_64"
                app:srcCompat="@drawable/baseline_sms_64"
                android:padding="5dp"/>
        </androidx.cardview.widget.CardView>


        <EditText

            android:id="@+id/verification_code_editText"
            android:layout_width="0dp"
            android:maxWidth="480dp"
            app:layout_constraintWidth_max="480dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:hint="@string/verification_code_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber_instructions_textView"
            android:importantForAutofill="no" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/confirm_phoneNumber_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@android:string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/verification_code_editText" />

        <Button
            android:id="@+id/cancel_phoneNumber_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verification_code_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
