<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="NewPostBinding"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <ImageView
            android:id="@+id/editor_pic_imageView"
            android:contentDescription="@string/post_pic_description"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/baseline_account_circle_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="15dp"
            />

        <TextView
            android:id="@+id/editor_name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/agent_name"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editor_pic_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_post_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="top|start"
            android:hint="@string/post_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:imeOptions="actionDone"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editor_pic_imageView" />

        <View
            android:id="@+id/content_post_divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_post_editText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/camera_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/take_pic"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/baseline_camera_alt_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_post_divider"
            app:srcCompat="@drawable/baseline_camera_alt_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pic_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/take_pic"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintStart_toEndOf="@id/camera_option_button"
            app:layout_constraintTop_toBottomOf="@id/content_post_divider"
            app:srcCompat="@drawable/baseline_image_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/take_pic"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/baseline_send_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_post_divider"
            app:srcCompat="@drawable/baseline_send_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>